--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,13 @@
         <textarea name="form_description"></textarea>
         <input type='submit' value='submit' class="submit_button">
       </form>
+      {% with messages = get_flashed_messages() %}
+        {% if messages %}
+          {% for message in messages %}
+            <p>{{message}}</p>
+          {% endfor %}
+        {% endif %}
+      {% endwith %}
     </div>
   </body>
 </html>
